--- a/education.html
+++ b/education.html
@@ -17,7 +17,7 @@
         </header>
         <hr>
         <main>
-            <table>
+            <table><section>
                 <Thead >
                 <caption> <bIG> ACADEMIC DATA </bIG></caption>
                 <div >
@@ -28,7 +28,8 @@
                     <th><PRE>                    TOTAL MARKS / PERCENTAGE      </PRE></th>
                 </tr>
             </div>
-        </Thead>
+        </Thead></section>
+        <section>
         <tbody>
                 <TR id="rowone"> 
                     <Td><PRE> 10<Sup>th</Sup> class</PRE></Td>
@@ -54,33 +55,33 @@
                     <TD><PRE>                              2026</PRE> </TD>
                     <TD><PRE>                                  ACTIVE</PRE></TD>
                  </TR>
-                </tbody>
+                </tbody></section>
             </table>
         </main>
         
-<BR>
+<BR><section>
 <FOOTER>  
     <hr><ul>
-  <li><pre>     <p>  here is my<b> 10<sup>th</sup> class</b> report card                                  <big> <a href="https://drive.google.com/file/d/1GPFnQ-v6hqbzy9HG94YYLSHg1J9s5lOp/view?usp=drivesdk"><button>click here</button></a></big></pre></li>
+  <li><pre>     <p>  here is my<b> 10<sup>th</sup> class</b> report card                                  <big> <a href="marksheet 10 th.pdf"><button>click here</button></a></big></pre></li>
     <hr>
-  <li><pre>     <p>  here is my<b> 12<sup>th</sup> class</b> report card                                  <big> <a href="https://drive.google.com/file/d/1g2iL5I3twnv1yYS-QuV49-ClU4O76oUj/view?usp=drivesdk"><button>click here</button></a></big></pre></li>  
+  <li><pre>     <p>  here is my<b> 12<sup>th</sup> class</b> report card                                  <big> <a href="marksheet 12.pdf"><button>click here</button></a></big></pre></li>  
     <hr>
   <li><pre>     <p>  here is my <b>DIPLOMA</b> results semesterwise </p> </li>                 
          <ul>
            <li>for<big> 3<sup>rd</sup> sem</big> result</pre></li>   
-              <pre><b> <a href = "https://drive.google.com/file/d/1gJFIqOcf1m2oZnxs8bTY32Fog659i-qR/view?usp=drivesdk" <big></b><button>click here</button></big></a></p></pre>                                                         
+              <pre><b> <a href = "3 rd sem result.jpg" <big></b><button>click here</button></big></a></p></pre>                                                         
            <li><pre>  for<big> 4<sup>th</sup> sem</big> result </pre></li>  
-              <pre> <a href = "https://drive.google.com/file/d/1gJ1arqeGskkWLOzdIkdJDYJ54BaILmn6/view?usp=drivesdk" <big><b><button>click here</button></b></big></a></p></pre> 
+              <pre> <a href = "4 th sem result.jpg" <big><b><button>click here</button></b></big></a></p></pre> 
            <li>   <pre>  for<big> 5<sup>th</sup> sem</big> result </pre></li>  
-              <pre> <a href = "https://drive.google.com/file/d/1gHEaFTle13ChrinO1W_eKeg7E4qTa_ZK/view?usp=drivesdk" <big><b><button>click here</button></b></big></a></p></pre> 
+              <pre> <a href = "5 th result.jpg" <big><b><button>click here</button></b></big></a></p></pre> 
            <li>    <pre>  for<big> 6<sup>th</sup> sem</big> result </pre></li>  
-              <pre> <a href = "https://drive.google.com/file/d/1gKDBfW9L3cVjfsnV0-AsMsW7YZ_mXNIQ/view?usp=drivesdk" <big><b><button>click here</button></b></big></a></p></pre>
+              <pre> <a href = "6 th sem .jpg" <big><b><button>click here</button></b></big></a></p></pre>
             <h3> <pre>                                                             Agregated percentage in diploma = 81.3%</pre></h3>
          </ul>
          <HR>
      <li><pre>     <p>  here is my <b>BTECH</b> results semesterwise                                         <b id="not"> "NOT DECLARED YET"</b></p></li></PRE>    
         </ul>
             <hr>
-        </FOOTER>
+        </FOOTER></section>
 </body>
 </html>
